Use the 'default' layout by default for all pages

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,10 @@ future: true
 # Exclude non-site files
 exclude: ['bin', 'README.md']
 
+defaults:
+  - values:
+      layout: default
+
 # Use the redcarpet Markdown renderer
 markdown: redcarpet
 redcarpet:
